--- a/css/estilos.css
+++ b/css/estilos.css
@@ -113,7 +113,7 @@ footer p{
 
 
 /**RESPONSIVO**/
-@media only screen and (max-width: 800px) {
+@media screen and (max-width:800px) {
     header img{
     	width: 80%;
     }
